[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/toolbox_project/assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/toolbox_project/scenes/ui/components/LabelBig.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/toolbox_project/scenes/ui/game/dialog/GameDialog.gd" type="Script" id=3]

[node name="GameDialog" type="CanvasLayer"]
pause_mode = 2
layer = 20
script = ExtResource( 3 )

[node name="InvisibleWall" type="TextureButton" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="PanelContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 276.0
margin_right = 712.0
margin_bottom = 324.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 4
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Popup"]
margin_left = 24.0
margin_top = 24.0
margin_right = 376.0
margin_bottom = 455.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBig" parent="CenterContainer/Popup/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 352.0
margin_bottom = 41.0
text = "GameDialog"

[node name="BtnResume" type="Button" parent="CenterContainer/Popup/VBoxContainer"]
margin_top = 57.0
margin_right = 352.0
margin_bottom = 106.0
text = "Resume"

[node name="BtnRetry" type="Button" parent="CenterContainer/Popup/VBoxContainer"]
margin_top = 122.0
margin_right = 352.0
margin_bottom = 171.0
text = "Restart Level"

[node name="BtnNext" type="Button" parent="CenterContainer/Popup/VBoxContainer"]
margin_top = 187.0
margin_right = 352.0
margin_bottom = 236.0
text = "Next Level"

[node name="BtnSettings" type="Button" parent="CenterContainer/Popup/VBoxContainer"]
margin_top = 252.0
margin_right = 352.0
margin_bottom = 301.0
text = "Settings"

[node name="BtnMenu" type="Button" parent="CenterContainer/Popup/VBoxContainer"]
margin_top = 317.0
margin_right = 352.0
margin_bottom = 366.0
text = "Back to menu"

[node name="BtnQuit" type="Button" parent="CenterContainer/Popup/VBoxContainer"]
margin_top = 382.0
margin_right = 352.0
margin_bottom = 431.0
text = "Quit game"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[connection signal="pressed" from="InvisibleWall" to="." method="_on_InvisibleWall_pressed"]
[connection signal="pressed" from="CenterContainer/Popup/VBoxContainer/BtnResume" to="." method="_on_BtnResume_pressed"]
[connection signal="pressed" from="CenterContainer/Popup/VBoxContainer/BtnRetry" to="." method="_on_BtnRetry_pressed"]
[connection signal="pressed" from="CenterContainer/Popup/VBoxContainer/BtnNext" to="." method="_on_BtnNext_pressed"]
[connection signal="pressed" from="CenterContainer/Popup/VBoxContainer/BtnSettings" to="." method="_on_BtnSettings_pressed"]
[connection signal="pressed" from="CenterContainer/Popup/VBoxContainer/BtnMenu" to="." method="_on_BtnMenu_pressed"]
[connection signal="pressed" from="CenterContainer/Popup/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
